--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,7 +5,11 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }} {{ site.middle_name }} {{ site.last_name }}</span>
+        <span class="font-weight-bold">
+        <span style="font-family: 'Georgia', serif;">{{ site.first_name }}</span>
+        <span style="font-family: 'Georgia', serif;">{{ site.middle_name }}</span>
+        <span style="font-family: 'Georgia', serif;">{{ site.last_name }}</span>
+      </span>
       {% else %}
         {{ site.title }}
       {% endif %}
