--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -6,9 +6,9 @@ layout: default
     <h1 class="post-title">
       {% if site.title == 'blank' %}
         <span class="font-weight-bold">
-        <span style="font-family: 'Georgia', serif;">{{ site.first_name }}</span>
-        <span style="font-family: 'Georgia', serif;">{{ site.middle_name }}</span>
-        <span style="font-family: 'Georgia', serif;">{{ site.last_name }}</span>
+        <span style="font-family: 'Gill Sans', sans-serif;">{{ site.first_name }}</span>
+        <span style="font-family: 'Gill Sans', sans-serif;">{{ site.middle_name }}</span>
+        <span style="font-family: 'Gill Sans', sans-serif;">{{ site.last_name }}</span>
       </span>
       {% else %}
         {{ site.title }}
