--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ strong {
   color: var(--global-text-color);
   font-family: sans-serif;
   text-align: justify;
-  margin-inline: 5%;
+  padding: 0 1.5rem
 }
 
 hr {
