--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,7 +19,7 @@ strong {
   color: var(--global-text-color);
   font-family: sans-serif;
   text-align: justify;
-  padding: 0 4rem
+  margin-inline: 10%;
 }
 
 hr {
