--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -213,16 +213,16 @@
       {% endif %}
       {% if entry.pdf %}
         {% if entry.pdf contains '://' %}
-          <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+          <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener">PDF</a>
         {% else %}
-          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener">PDF</a>
         {% endif %}
       {% endif %}
       {% if entry.supp %}
-        {% if entry.supp contains '://' %}
-          <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supplement</a>
-        {% else %}
-          <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supplement</a>
+	{% if entry.supp contains '://' %}
+    	  <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener">Supplement</a>
+  	{% else %}
+    	  <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button" target="_blank" rel="noopener">Supplement</a>
         {% endif %}
       {% endif %}
       {% if entry.video and site.enable_video_embedding %}
